--- a/Indice_Briones.html
+++ b/Indice_Briones.html
@@ -10,5 +10,8 @@
     <h2>Jessenia Lisseth Briones Tenecora</h2>
     <h2>25</h2>
     <h2>La Concordia</h2>
+    <h2>8vo "B"</h2>
+    <h2>Tecnologías de la Información</h2>
+    <h2>Trabajo final</h2>
 </body>
 </html>
